# Ranok

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateVsProject.bat
Assets/: ranokFunctions.txt
Assets/CodeLibrary/: BaseLib.rcode
Assets/Config/: DefaultLayout.ini
Assets/Config/Modules/: ModelingConfig.json  RayMarchingViewConfig.json
Assets/DefaultConfig/: SomeSettings.json
Assets/DefaultConfig/Editor/: Editorconfigs.json
Assets/DefaultConfig/Ini/: DefaultLayout.ini
Assets/DefaultConfig/Localization/: LocalizationConfig.json
Assets/DefaultConfig/Modules/: ModelingConfig.json  RayMarchingViewConfig.json
Assets/DefaultConfig/Shaders/: ShaderStorage.json
Assets/Examples/NewFuncs/: lopatka.txt
Assets/NewCodeExample/: CodeExample1.rcode  CodeExample1.txt  imgui.ini
Assets/Shaders/: BaseMaterial.frag  BaseMaterial.vert  RayMarching.frag
Assets/StdLibrary/: BaseLib.txt
Assets/Styles/: Default.txt
Config/Modules/: ModelingConfig.json  RayMarchingViewConfig.json
Source/Config/Config/: ConfigManager.cpp  IConfig.h
Source/Editor/: CMakeLists.txt
Source/Editor/Editor/: Editor.cpp  Editor.h
Source/Executor/Executor/: OpenclExecutor.h
Source/Graphics/: CMakeLists.txt
Source/Graphics/Graphics/: OpenclExecutor.h
Source/Language/: CMakeLists.txt
Source/Language/Language/: ActionTree.cpp  CodeLibraryLoader.cpp  HardcodedConstructions.cpp  Lexer.cpp  LibraryStorage.h  Parser.cpp
Source/Localization/: CMakeLists.txt
Source/Localization/Localization/: LocalizationSystem.cpp
Source/Log/Log/: LogOutputDevice.h  Logger.h
Source/Model/: CMakeLists.txt
Source/Model/Model/: Space.cpp  Space.h
Source/Utils/: CMakeLists.txt
Source/Utils/Utils/: FileUtils.h  ImGuiUtils.h  ModuleSystem.h  StringUtils.h  TextureManager.cpp
Source/VoxelCore/: CMakeLists.txt
Source/WindowSystem/WindowSystem/: GuiLayer.cpp  GuiLayer.h  ISdlWindow.cpp  InputSystem.cpp  OpenglWindow.cpp
Sources/: CMakeLists.txt  main.cpp
Sources/Application/: MainWindow.h
Sources/Config/: ConfigManager.cpp  ConfigManager.h  IConfig.cpp  IConfig.h
Sources/Editor/: BlueprintEditor.cpp  BlueprintEditor.h  Editor.cpp  Editor.h  ModuleSystem.h  Settings.h  TextEditor.cpp  TextEditor.h  WLogs.cpp  WLogs.h
Sources/Editor/Blueprints/: BlueprintEditor.cpp  BlueprintEditor.h  Nodes.cpp  Nodes.h
Sources/Editor/Modules/: EditorModule.h
Sources/Editor/Modules/Logger/: LoggerModule.h  LoggerOutputDevice.cpp  LoggerOutputDevice.h
Sources/Editor/Modules/MImageComputeModule/: MImageComputeModule.cpp  MImageComputeModule.h
Sources/Editor/Modules/ModelingModule/: ModelingModule.cpp  ModelingModule.h  RaymarchingView.cpp  RaymarchingView.h  TextEditor.cpp  TextEditor.h  TextEditorSettings.h
Sources/Editor/Modules/ViewportModule/: ViewportModule.h
Sources/Executor/: OpenclExecutor.cpp  OpenclExecutor.h
Sources/Graphics/: Camera.cpp  Camera.h  Scene.cpp  Scene.h  Window.cpp  Window.h
Sources/Graphics/Buffers/: Buffer.cpp  Buffer.h  FrameBuffer.cpp  FrameBuffer.h
Sources/Graphics/Gui/: FileDialog.cpp  FileDialog.h  Gui.h  GuiItem.cpp  GuiItem.h  Scene.cpp  Scene.h  TextEditWindow.cpp  TextEditWindow.h
Sources/Graphics/Gui/Base/: GuiItem.cpp  GuiItem.h
Sources/Graphics/Gui/Dialogs/: FileDialog.cpp  FileDialog.h
Sources/Graphics/Gui/TextEditor/: RanokTextEditor.cpp  RanokTextEditor.h  TextEditor.cpp  TextEditor.h
Sources/Graphics/Materials/: BaseMaterial.cpp  BaseMaterial.h  IMaterial.cpp  IMaterial.h
Sources/Graphics/Opengl/: Camera.h  Cube.cpp  Cube.h  GridObject.cpp  GridObject.h  Opengl.h  RayMarchingView.cpp  RayMarchingView.h  Renderable.cpp  Renderable.h  Shader.cpp  Shader.h  VoxelObejct.cpp  VoxelObejct.h  VoxelObject.cpp  VoxelObject.h
Sources/Graphics/Opengl/Base/: Renderable.h  Shader.cpp  Shader.h
Sources/Graphics/Rendering/: IRender.h  Object.cpp  Object.h  OpenglRender.cpp  OpenglRender.h  Texture.cpp  Texture.h  VoxelModel.cpp  VoxelModel.h
Sources/Graphics/Shading/: Shader.cpp  Shader.h  ShaderInfo.cpp  ShaderInfo.h  ShaderPart.cpp  ShaderPart.h  ShaderStorage.cpp  ShaderStorage.h
Sources/Graphics/Widgets/: Gui.h  Opengl.h
Sources/Graphics/Widgets/Gui/: GuiItem.cpp  GuiItem.h  RanokTextEditor.cpp  RanokTextEditor.h
Sources/Graphics/Widgets/Opengl/: Shader.h
Sources/GuiWrap/: IWidget.h  WButton.h  WLogs.cpp  WLogs.h  WMenuBar.h  WRawWidget.h  WSubWindow.h  WText.h  WTexture.h  WWindow.h
Sources/Language/: ActionNode.cpp  ActionNode.h  ActionTree.cpp  ActionTree.h  CMakeLists.txt  CodeLibraryLoader.cpp  CodeLibraryLoader.h  HardcodedConstructions.cpp  HardcodedConstructions.h  Lexer.cpp  Lexer.h  LibraryStorage.cpp  Parser.cpp  Parser.h  StdLibrary.cpp  StdLibrary.h  SyntaxTree.cpp  SyntaxTree.h  Token.h
Sources/Language/Generators/: IGenerator.cpp  IGenerator.h  OpenclGenerator.cpp  OpenclGenerator.h  ShaderGenerator.cpp  ShaderGenerator.h
Sources/Localization/: LocalizationSystem.cpp  LocalizationSystem.h
Sources/Log/: LogOutputDevice.cpp  Logger.cpp  Logger.h  OutputDevice.cpp  OutputDevice.h
Sources/Model/: LinearGradient.h  Space.cpp  Space.h
Sources/OpenGL/Core/: Buffer.cpp  FrameBuffer.cpp  FrameBuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Sources/Settings/: ISettings.cpp  ISettings.h  SettingsManager.cpp  SettingsManager.h
Sources/Utility/: Checks.h  FileSystem.cpp  FileSystem.h  ImageStorage.cpp  ImageStorage.h  Serializable.h  StringUtility.cpp
Sources/Utils/: FileUtils.h  FlatArray.h  ImGuiUtils.h  Math.h  MemoryUtils.h  ModuleSystem.cpp  ModuleSystem.h  StyleLoader.h  SystemSettings.cpp  SystemSettings.h  TextureManager.cpp  TextureManager.h  WindowsUtils.cpp  WindowsUtils.h
Sources/Utils/Archives/: FileArchive.cpp  FileArchive.h  IArchive.cpp  IArchive.h  ISerializable.h  Serializer.cpp  Serializer.h
Sources/Utils/Archives/Json/: JsonArchive.cpp  JsonArchive.h
Sources/WindowSystem/: ISdlWindow.cpp  ISdlWindow.h  InputSystem.h  OpenglWindow.cpp  OpenglWindow.h
src/: main.cpp
src/Graphics/: GuiItem.h  Renderable.cpp  Renderable.h  Window.cpp  Window.h
src/Graphics/Widgets/: Gui.h
(+43 files in other folders)
